
<resources>
<string name="app_name">Say</string>
<plurals name="was_clicked">
    <item quantity="one">I\'ve been clicked %d time!</item>
    <item quantity="other">I\'ve been clicked %d times!</item>
</plurals>
    <string name="was_clicked">I\'ve_been_clicked!</string>
    <string name="say">Say</string>
    <string name="start">Start</string>
    <string name="level">Level</string>
    <string name="progress">Progress</string>
    <string name="say_title">Say ( Title)</string>
    <string name="this_is_the_app_icon">This is the app Icon</string>
    <string name="lesson_1_cards">Lesson 1 Cards</string>
    <string name="blue_background">Blue background</string>
    <string name="review_cards">Review Cards</string>
    <string name="pronouns">Pronouns</string>
    <string name="verbs">Verbs</string>
    <string name="adjectives">adjectives</string>
    <string name="nouns">Nouns</string>
    <string name="lesson_1_cards">Lesson 1 Cards</string>
    <string name="pronouns">Pronouns</string>
    <string name="il_he">IL / He</string>
    <string name="she_elle">She / Elle</string>
    <string name="you_tu">You / Tu</string>
    <string name="background_color">Background color</string>
    <string name="background_color">Background color</string>
    <string name="background_color">Background color</string>
    <string name="background_color">Background color</string>
    <string name="frebch_test_1">Frebch Test 1</string>
    <string name="pronouns">Pronouns</string>
    <string name="tu">Tu</string>
    <string name="elle">Elle</string>
    <string name="hello">Hello</string>
    <string name="she">She</string>
    <string name="background_color">Background color</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="cards">Cards</string>
    <string name="quizzes">Quizzes</string>
    <string name="tests">Tests</string>
    <string name="french_lesson_1">French Lesson 1</string>
    <string name="compleated">Compleated</string>
    <string name="background_color">Background color</string>
    <string name="english">English</string>
    <string name="choose_your_desiered_language">Choose Your Desiered Language.</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="back"><![CDATA[<Back]]></string>
    <string name="german">German</string>
    <string name="frebch_quiz_1">Frebch Quiz 1</string>
    <string name="pronouns">Pronouns</string>
    <string name="tu">Tu</string>
    <string name="il">IL</string>
    <string name="hello">Hello</string>
    <string name="you">You</string>
    <string name="background_color">Background color</string>
    <string name="vocabulary_1">Vocabulary 1</string>
    <string name="pronouns">Pronouns</string>
    <string name="he">He</string>
    <string name="il">IL</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="backwards"><![CDATA[< Back]]></string>
    <string name="devider">devider</string>
    <string name="background">Background</string>
    <string name="vocabulary_1">Vocabulary 1</string>
    <string name="pronouns">Pronouns</string>
    <string name="she">She</string>
    <string name="elle">Elle</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="backwards"><![CDATA[< Back]]></string>
    <string name="devider">devider</string>
    <string name="vocabulary_1">Vocabulary 1</string>
    <string name="pronouns">Pronouns</string>
    <string name="you">You</string>
    <string name="tu">Tu</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="backwards"><![CDATA[< Back]]></string>
    <string name="background">Background</string>
    <string name="devider">devider</string>

</resources>
