<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="219dp"
            tools:srcCompat="@color/colorPrimary"
            android:id="@+id/imageView7"
            android:layout_height="10dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="13dp" app:layout_constraintBottom_toTopOf="@+id/textView6"
            android:contentDescription="@string/devider"/>
    <ImageView
            android:layout_width="436dp"
            tools:srcCompat="@color/colorPrimary"
            android:id="@+id/imageView3"
            android:layout_height="105dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar" android:contentDescription="@string/background"/>
    <TextView
            android:text="@string/vocabulary_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="30sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.496" android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    <TextView
            android:text="@string/pronouns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" app:layout_constraintVertical_bias="0.839"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="323dp"
            android:layout_height="23dp"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="90dp" app:layout_constraintBottom_toTopOf="@+id/textView5"/>
    <TextView
            android:text="@string/he"
            android:layout_width="73dp"
            android:layout_height="68dp"
            android:id="@+id/textView5" android:textSize="50sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="9dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView7"/>
    <TextView
            android:text="@string/il"
            android:layout_width="48dp"
            android:layout_height="64dp"
            android:id="@+id/textView6" android:textSize="50sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="251dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button13" android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textSize="18sp" android:layout_marginBottom="121dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/button14"
            android:layout_marginStart="191dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="17dp"/>
    <Button
            android:text="@string/backwards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button14" android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textSize="18sp" android:layout_marginBottom="121dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="27dp"/>
</android.support.constraint.ConstraintLayout>