<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <Button
            android:text="@string/vocabulary"
            android:layout_width="346dp"
            android:layout_height="0dp"
            android:id="@+id/vocab_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.501" android:textSize="18sp"
            android:background="@color/colorAccent" android:textColor="@color/colorBackground"
            android:textStyle="bold" android:layout_marginBottom="45dp"
            app:layout_constraintBottom_toTopOf="@+id/card_button"/>
    <Button
            android:text="@string/cards"
            android:layout_width="346dp"
            android:layout_height="0dp"
            android:id="@+id/card_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="18sp"
            android:background="@color/colorAccent" android:textColor="@color/colorBackground"
            android:textStyle="bold" android:layout_marginBottom="47dp"
            app:layout_constraintBottom_toTopOf="@+id/quiz_button"/>
    <Button
            android:text="@string/quizzes"
            android:layout_width="346dp"
            android:layout_height="0dp"
            android:id="@+id/quiz_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="18sp"
            android:background="@color/colorAccent" android:textColor="@color/colorBackground"
            android:textStyle="bold" android:layout_marginBottom="51dp"
            app:layout_constraintBottom_toTopOf="@+id/test_button"/>
    <Button
            android:text="@string/tests"
            android:layout_width="346dp"
            android:layout_height="0dp"
            android:id="@+id/test_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="18sp"
            android:background="@color/colorAccent" android:textColor="@color/colorBackground"
            android:textStyle="bold" android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="436dp"
            tools:srcCompat="@color/colorPrimary"
            android:id="@+id/imageView2"
            android:layout_height="105dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="77dp" android:layout_marginBottom="114dp"
            app:layout_constraintBottom_toTopOf="@+id/vocab_button" android:contentDescription="@string/background_color"/>
    <TextView
            android:text="@string/french_lesson_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="30sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" android:textStyle="bold"
            android:layout_marginBottom="7dp" app:layout_constraintBottom_toTopOf="@+id/checkBox"/>
    <CheckBox
            android:text="@string/compleated"
            android:layout_width="127dp"
            android:layout_height="32dp"
            android:id="@+id/checkBox" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"/>
</android.support.constraint.ConstraintLayout>