<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="321dp"
            android:layout_height="38dp"
            android:id="@+id/progressBar5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView12"/>
    <ImageView
            android:layout_width="436dp"
            tools:srcCompat="@color/colorPrimary"
            android:id="@+id/imageView12"
            android:layout_height="105dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.512" android:contentDescription="@string/background_color"/>
    <TextView
            android:text="@string/frebch_test_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" android:textSize="30sp"
            android:textStyle="bold" android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView19" android:layout_marginBottom="4dp"/>
    <TextView
            android:text="@string/pronouns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12" android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/tu"
            android:layout_width="337dp"
            android:layout_height="47dp"
            android:id="@+id/button21" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:background="@color/colorAccent" android:textColor="@color/colorBackground"
            android:textStyle="bold" android:textSize="18sp" android:layout_marginBottom="39dp"
            app:layout_constraintBottom_toTopOf="@+id/button22"/>
    <Button
            android:text="@string/elle"
            android:layout_width="337dp"
            android:layout_height="47dp"
            android:id="@+id/button22" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:background="@color/colorAccent" android:textColor="@color/colorBackground"
            android:textStyle="bold" android:textSize="18sp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/button23"/>
    <Button
            android:text="@string/hello"
            android:layout_width="337dp"
            android:layout_height="47dp"
            android:id="@+id/button23" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:background="@color/colorAccent" android:textColor="@color/colorBackground"
            android:textStyle="bold" android:textSize="18sp" android:layout_marginBottom="148dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/she"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView20" android:textSize="50sp"
            android:textStyle="bold" android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="62dp"
            app:layout_constraintBottom_toTopOf="@+id/button21" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar5"/>
</android.support.constraint.ConstraintLayout>