<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/say"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/my_text_view" android:textSize="50sp"
            android:textStyle="bold" app:layout_constraintHorizontal_bias="0.498"
            android:contentDescription="@string/say_title"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
    <Button
            android:text="@string/start"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/my_button"
            android:background="@color/colorAccent"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/my_text_view" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/colorBackground" android:textStyle="bold" android:textSize="24sp"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher_foreground"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/my_text_view"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.489"
            android:scaleType="centerCrop" android:contentDescription="@string/this_is_the_app_icon"/>
    <Button
            android:text="@string/level"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/my_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="1.0" android:textSize="24sp"/>
    <Button
            android:text="@string/progress"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/button2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" app:layout_constraintHorizontal_bias="1.0"
            android:textSize="24sp"/>

    <fragment class="com.google.android.gms.maps.SupportMapFragment" android:id="@+id/my_map_view"
              android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.48"
              app:layout_constraintVertical_bias="0.57"/>


</android.support.constraint.ConstraintLayout>
