<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <Button
            android:text="@string/english"
            android:layout_width="364dp"
            android:layout_height="48dp"
            android:id="@+id/button3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary" android:textColor="@color/colorBackground" android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.483" app:layout_constraintVertical_bias="0.583"/>
    <TextView
            android:text="@string/choose_your_desiered_language"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button3" android:textSize="24sp" android:textStyle="bold"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintVertical_bias="0.429"/>
    <Button
            android:text="@string/french"
            android:layout_width="364dp"
            android:layout_height="48dp"
            android:id="@+id/button4" android:background="@color/colorPrimary"
            android:textColor="@color/colorBackground" android:textSize="24sp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button3" app:layout_constraintVertical_bias="0.22"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.516"/>
    <Button
            android:text="@string/spanish"
            android:layout_width="364dp"
            android:layout_height="48dp"
            android:id="@+id/button5" android:background="@color/colorPrimary"
            android:textColor="@color/colorBackground" android:textSize="24sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button3" app:layout_constraintVertical_bias="0.63"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="27dp"/>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6" android:background="@color/colorAccent"
            android:textSize="18sp" android:textColor="@color/colorBackground"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="27dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="296dp"
            android:layout_marginBottom="88dp" app:layout_constraintBottom_toTopOf="@+id/textView"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:layout_width="364dp"
            android:layout_height="44dp"
            android:id="@+id/button7" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button4"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.516" app:layout_constraintVertical_bias="0.322"
            android:textColor="@color/colorBackground" android:background="@color/colorPrimary" android:textSize="24sp"
            android:text="@string/german"/>
</android.support.constraint.ConstraintLayout>