<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="436dp"
            tools:srcCompat="@color/colorPrimary"
            android:id="@+id/imageView5"
            android:layout_height="105dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="133dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView13" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="76dp" android:contentDescription="@string/background_color"/>
    <ImageView
            android:layout_width="131dp"
            tools:srcCompat="@color/colorPrimary"
            android:id="@+id/imageView13"
            android:layout_height="103dp" android:layout_marginTop="133dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="45dp" android:contentDescription="@string/background_color"/>
    <ImageView
            android:layout_width="131dp"
            tools:srcCompat="@color/colorPrimary"
            android:id="@+id/imageView14"
            android:layout_height="103dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="45dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="235dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" android:layout_marginBottom="163dp"
            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/background_color"/>
    <ImageView
            android:layout_width="131dp"
            tools:srcCompat="@color/colorPrimary"
            android:id="@+id/imageView15"
            android:layout_height="103dp" android:layout_marginTop="133dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" android:layout_marginStart="43dp"
            app:layout_constraintStart_toEndOf="@+id/imageView13" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="61dp" android:layout_marginBottom="314dp"
            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/background_color"/>
    <TextView
            android:text="@string/lesson_1_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView23" android:textSize="30sp"
            android:textStyle="bold" android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@+id/textView24"/>
    <TextView
            android:text="@string/pronouns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView24" android:textStyle="bold"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/il_he"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:id="@+id/textView27" android:textSize="24sp"
            android:textStyle="bold" android:textColor="@color/colorBackground"
            app:layout_constraintTop_toTopOf="@+id/imageView13"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintStart_toStartOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="@+id/imageView13"/>
    <TextView
            android:text="@string/she_elle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView28" android:textSize="24sp"
            android:textStyle="bold" android:textColor="@color/colorBackground"
            app:layout_constraintTop_toTopOf="@+id/imageView15"
            app:layout_constraintBottom_toBottomOf="@+id/imageView15"
            app:layout_constraintStart_toStartOf="@+id/imageView15"
            app:layout_constraintEnd_toEndOf="@+id/imageView15"/>
    <TextView
            android:text="@string/you_tu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView29" android:textSize="24sp"
            android:textStyle="bold" android:textColor="@color/colorBackground"
            app:layout_constraintTop_toTopOf="@+id/imageView14"
            app:layout_constraintBottom_toBottomOf="@+id/imageView14"
            app:layout_constraintEnd_toEndOf="@+id/imageView14"
            app:layout_constraintStart_toStartOf="@+id/imageView14"/>
</android.support.constraint.ConstraintLayout>